--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 PRIVATE_KEY="<Your Private Key Here>"
+COIN_MARKET_CAP_API_KEY = "<Your API Key Here>"
 
 REFRESH_INTERVAL=300000 # 5 minutes in milliseconds
 MAX_RETRIES=3 # Number of retries on failure
-COIN_ID=bitcoin # Default coin identifier
+COIN_ID=1 # BTC
+DENOMINATED_COIN_ID=USD
+
+## SPJS
+CHAIN_ID=pulsar-3
+RPC_URL=https://api.pulsar3.scrttestnet.com
+MNEMONIC="<Your MNEUMONIC Key Here>"
