fix timing after period

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ REFRESH_INTERVAL=300000 # 5 minutes in milliseconds
 MAX_RETRIES=3 # Number of retries on failure
 COIN_ID=1 # BTC
 DENOMINATED_COIN_ID=USD
-
+ADDITIONAL_SECONDS=20
 ## SPJS
 CHAIN_ID=pulsar-3
 RPC_URL=https://api.pulsar3.scrttestnet.com
