--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,19 @@
-PRIVATE_KEY="<Your Private Key Here>"
-COIN_MARKET_CAP_API_KEY = "<Your API Key Here>"
+PRIVATE_KEY=
+COIN_MARKET_CAP_API_KEY=
 
 REFRESH_INTERVAL=300000 # 5 minutes in milliseconds
-MAX_RETRIES=3 # Number of retries on failure
+MAX_RETRIES=5 # Number of retries on failure
 COIN_ID=1 # BTC
 DENOMINATED_COIN_ID=USD
-ADDITIONAL_SECONDS=20
+ADDITIONAL_SECONDS=40
+
 ## SPJS
+# Secret Network Configuration
 CHAIN_ID=pulsar-3
 RPC_URL=https://api.pulsar3.scrttestnet.com
-MNEMONIC="<Your MNEUMONIC Key Here>"
+
+# Wallet Configuration
+MNEMONIC=
+
+RECLAIM_CLIENT_ADDRESS=
+RECLAIM_CLIENT_SECRET=
